# ACTNOTE

./: .env.example  .gitignore  CLAUDE.md  Procfile  README.md  pyproject.toml  railway.toml
actnote-web/: .env.example  middleware.ts  next.config.mjs  tailwind.config.ts
docs/: events.md  features.md  frontend-fix-queue.md  frontend-handoff.md  local-qa-guidebook.md  meeting-soft-delete-policy.md  notion-oauth.md  rpc.md  task-split.md
migrations/: 001_initial_schema.sql  002_signup_workspace_trigger.sql  003_pgvector_setup.sql  004_bitemporal.sql  005_action_resolver_support.sql  006_loosen_threshold.sql  007_meeting_embeddings_metadata.sql  008_opt_out_training.sql  009_meeting_publication.sql  010_notifications.sql  011_meeting_search_rpc.sql  012_notion_integration.sql  013_add_storage_policies.sql  013_referenced_documents.sql  014_add_participants_and_meeting_type.sql  014_meeting_metadata.sql  015_publication_rpc.sql  016_workspace_invites.sql  017_member_role_rpc.sql  018_remove_member_rpc.sql  019_meetings_select_soft_delete_rls.sql  019_workspace_members_rls_no_recursion.sql  021_publish_optional_notion.sql  022_user_notification_email_prefs.sql  023_action_dirty_flag.sql  025_fix_meetings_update_rls.sql  025_fix_owner_transfer.sql  026_fix_meetings_update_rls.sql  026_workspace_join_requests.sql  027_workspace_members_client_delete.sql  028_invite_expiry_extend.sql  028_workspace_preview_rpc.sql  029_invite_preview_rpc.sql  029_preview_workspace_invite.sql  030_leave_workspace_rpc.sql  030_preview_workspace_invite_email_normalize.sql  (+46 more)
src/: alignment.py  (+30 more)
(+201 files in other folders)
