[project]
name = "actnote"
version = "0.1.0"
description = "Actnote - audio meeting to action items pipeline (STT + diarization + LLM)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.40",
    "pyannote.audio>=3.1",
    "pydub>=0.25",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.0",
    "audioop-lts>=0.2.2 ; python_full_version >= '3.13'",
    "jiwer>=4.0.0",
    "supabase>=2.0.0",
    "pgvector>=0.3.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.20.0",
    "notion-client>=2.2.1",
    "cryptography>=42.0.0",
    "httpx>=0.27",
    "resend>=2.4.0",
    "modal>=0.64",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true
